# ModMail

./: CHANGELOG.md  Dockerfile  Pipfile  README.md  bot.py  pyproject.toml  requirements.txt
cogs/: modmail.py  plugins.py  threadmenu.py  utility.py
core/: clients.py  config.py  config_help.json  models.py  thread.py  utils.py
