[tool.black]
line-length = "110"
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.venv
    | venv
    | venv2
    | _build
    | build
    | dist
    | plugins
    | temp
  )/
)
'''

[tool.poetry]
name = 'Modmail'
version = '4.2.1'
description = "Modmail is similar to Reddit's Modmail, both in functionality and purpose. It serves as a shared inbox for server staff to communicate with their users in a seamless way."
license = 'AGPL-3.0-only'
authors = [
    'kyb3r <noemail@example.com>',
    '4jr <noemail@example.com>',
    'Taki <noemail@example.com>'
]
readme = 'README.md'
repository = 'https://github.com/modmail-dev/modmail'
homepage = 'https://github.com/modmail-dev/modmail'
keywords = ['discord', 'modmail']

[tool.pylint.format]
max-line-length = "110"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
discord-py = "^2.6.4"
isodate = "^0.7.2"
aiosqlite = "^0.22.1"
python-dotenv = "^1.2.1"
aiohttp = "^3.13.2"
sqlalchemy = "^2.0.45"
emoji = "^2.15.0"
packaging = "^25.0"
motor = "^3.7.1"
parsedatetime = "^2.6"
python-dateutil = "^2.9.0.post0"
lottie = "^0.7.2"
cairosvg = "^2.8.2"
pynacl = "^1.6.2"

